# home_practice_pycharm

./: README.md  main.py  pyproject.toml
src/: masks.py  widget.py
